--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <main>
-        <h1>welcome</h1>
+        <h1>project set up done</h1>
     </main>
     <script src="scripts/utility.js"></script>
     <script src="scripts//ticketing.js"></script>
