--- a/index.html
+++ b/index.html
@@ -174,12 +174,16 @@
                                         <thead>
                                             <tr>
                                                 <th class=" text-3xl">
-                                                    <p class=" lg:text-3xl text-primary"><i class="fa-solid fa-van-shuttle text-3xl"></i>Greenline Paribahan</p>
+                                                    <p class=" lg:text-3xl text-primary"><i
+                                                            class="fa-solid fa-van-shuttle text-3xl"></i>Greenline
+                                                        Paribahan</p>
                                                     <p class=" text-xl text-secondary">Coach-009-WEB ! AC_Business</p>
                                                 </th>
                                                 <th></th>
                                                 <th class=" text-right">
-                                                    <button class="btn bg-amber-200"><i class="fa-solid fa-couch"></i><span id="current-seat-left">40</span>seats left</button>
+                                                    <button class="btn bg-amber-200"><i
+                                                            class="fa-solid fa-couch"></i><span
+                                                            id="current-seat-left">40</span>seats left</button>
                                                 </th>
                                             </tr>
                                         </thead>
@@ -202,7 +206,8 @@
                                                         Point - Laxmipur</button></td>
                                                 <td><button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">Dropping
                                                         Point - Bogura</button></td>
-                                                <td class=" text-right"><button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">Est. Time -
+                                                <td class=" text-right"><button
+                                                        class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">Est. Time -
                                                         11 Hour</button></td>
                                             </tr>
                                         </tbody>
@@ -245,7 +250,9 @@
                         </div>
                     </div>
                     <div class=" flex items-center space-x-10 my-4">
-                        <div><h1>A</h1></div>
+                        <div>
+                            <h1>A</h1>
+                        </div>
                         <div class="grid grid-cols-2 gap-16">
                             <div class="flex gap-3 seat-conainter">
                                 <button id="A1" class="btn seat lg:w-52">A1</button>
@@ -258,7 +265,9 @@
                         </div>
                     </div>
                     <div class=" flex items-center space-x-10 my-4">
-                        <div><h1>B</h1></div>
+                        <div>
+                            <h1>B</h1>
+                        </div>
                         <div class="grid grid-cols-2 gap-16">
                             <div class="flex gap-3 seat-conainter">
                                 <div><button class="btn seat lg:w-52">B1</button></div>
@@ -271,7 +280,9 @@
                         </div>
                     </div>
                     <div class=" flex items-center space-x-10 my-4">
-                        <div><h1>C</h1></div>
+                        <div>
+                            <h1>C</h1>
+                        </div>
                         <div class="grid grid-cols-2 gap-16">
                             <div class="flex gap-3">
                                 <div><button class="btn seat lg:w-52">C1</button></div>
@@ -284,7 +295,9 @@
                         </div>
                     </div>
                     <div class=" flex items-center space-x-10 my-4">
-                        <div><h1>D</h1></div>
+                        <div>
+                            <h1>D</h1>
+                        </div>
                         <div class="grid grid-cols-2 gap-16">
                             <div class="flex gap-3">
                                 <div><button class="btn seat lg:w-52">D1</button></div>
@@ -297,7 +310,9 @@
                         </div>
                     </div>
                     <div class=" flex items-center space-x-10 my-4">
-                        <div><h1>E</h1></div>
+                        <div>
+                            <h1>E</h1>
+                        </div>
                         <div class="grid grid-cols-2 gap-16">
                             <div class="flex gap-3">
                                 <div><button class="btn seat lg:w-52">E1</button></div>
@@ -310,7 +325,9 @@
                         </div>
                     </div>
                     <div class=" flex items-center space-x-10 my-4">
-                        <div><h1>F</h1></div>
+                        <div>
+                            <h1>F</h1>
+                        </div>
                         <div class="grid grid-cols-2 gap-16">
                             <div class="flex gap-3">
                                 <div><button class="btn seat lg:w-52">F1</button></div>
@@ -323,7 +340,9 @@
                         </div>
                     </div>
                     <div class=" flex items-center space-x-10 my-4">
-                        <div><h1>G</h1></div>
+                        <div>
+                            <h1>G</h1>
+                        </div>
                         <div class="grid grid-cols-2 gap-16">
                             <div class="flex gap-3">
                                 <div><button class="btn seat lg:w-52">G1</button></div>
@@ -336,7 +355,9 @@
                         </div>
                     </div>
                     <div class=" flex items-center space-x-10 my-4">
-                        <div><h1>H</h1></div>
+                        <div>
+                            <h1>H</h1>
+                        </div>
                         <div class="grid grid-cols-2 gap-16">
                             <div class="flex gap-3">
                                 <div><button class="btn seat lg:w-52">H1</button></div>
@@ -349,7 +370,9 @@
                         </div>
                     </div>
                     <div class=" flex items-center space-x-10 my-4">
-                        <div><h1>I</h1></div>
+                        <div>
+                            <h1>I</h1>
+                        </div>
                         <div class="grid grid-cols-2 gap-16">
                             <div class="flex gap-3">
                                 <div><button class="btn seat lg:w-52">I1</button></div>
@@ -362,7 +385,9 @@
                         </div>
                     </div>
                     <div class=" flex items-center space-x-10 my-4">
-                        <div><h1>J</h1></div>
+                        <div>
+                            <h1>J</h1>
+                        </div>
                         <div class="grid grid-cols-2 gap-16">
                             <div class="flex gap-3">
                                 <div><button class="btn seat lg:w-52">J1</button></div>
@@ -415,11 +440,32 @@
                         <label for="name">Email</label><br>
                         <input type="email" placeholder="Type here" class="input input-bordered input-accent w-full " />
 
-                        <input type="submit" placeholder="Type here" class="input input-bordered bg-amber-400 w-full " />
+                        <!-- <input type="submit" placeholder="Type here"
+                            class="input input-bordered bg-amber-400 w-full " /> -->
+                        <label for="my_modal_7" onclick="my_modal_1.showModal()" class="btn bg-amber-400 w-full">Next</label>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- Modal  -->
+        <!-- <button class="btn" onclick="my_modal_1.showModal()">open modal</button> -->
+        <dialog id="my_modal_1" class="modal">
+            <div class="modal-box text-center">
+                <div class=" flex justify-center">
+                    <img src="images/success.png" alt="" srcset="">
+                </div>
+                <h3 class="text-lg font-bold">Congrats!</h3>
+                <p class="py-4">Thank you for Booking Our Bus Seats.
+                    We are working hard to find the best service and deals for you.
+                    Shortly you will find a confirmation in your email!</p>
+                <div class="modal-action">
+                    <form method="dialog" class="flex justify-end items-center">
+                        <!-- if there is a button in form, it will close the modal -->
+                        <button class="btn bg-amber-300">Continue</button>
+                    </form>
+                </div>
+            </div>
+        </dialog>
     </main>
     <script src="scripts/utility.js"></script>
     <script src="scripts//ticketing.js"></script>
