refurnished some classes

--- a/index.html
+++ b/index.html
@@ -428,10 +428,8 @@
                         <input type="tel" placeholder="Type your number" class="input input-bordered input-accent w-full " />
                         <label for="email" class=" font-medium">Email*</label><br>
                         <input type="email" placeholder="Type your email" class="input input-bordered input-accent w-full " />
-
-                        <!-- <input type="submit" placeholder="Type here"
-                            class="input input-bordered bg-amber-400 w-full " /> -->
-                        <label for="my_modal_7" onclick="my_modal_1.showModal()" class="btn bg-amber-400 w-full">Next</label>
+                        <!-- <label for="my_modal_7"  onclick="my_modal_1.showModal()" class="btn bg-amber-400 w-full">Next</label> -->
+                        <button id="btn-next" disabled class="btn bg-amber-400 w-full" onclick="my_modal_1.showModal()">Next</button>
                     </div>
                     <div class="flex justify-center gap-6">
                         <p class=" underline">Terms and Conditions</p>
