--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                         <h1 class="text-6xl text-white font-bold">End-to-End Travel with <br>
                             <span class="text-beautify">P Paribahan</span>
                         </h1>
-                        <p class="py-6 text-xl">Yes, you can run unit tests and view the results directly within the
-                            app. The <br> integrated testing features allow for a streamlined .</p>
+                        <p class="py-6 text-xl">Hassle Free ticket booking system wher you can view the results directly within the
+                            app.<br> The  integrated testing features allow for a streamlined .</p>
                         <a href="#paribahan"><button class="btn bg-beautify outline-none font-bold px-8">Buy
                                 Tickets</button></a>
                     </div>
@@ -149,7 +149,7 @@
             <div class=" container mx-auto py-24">
                 <div class=" text-center">
                     <h1 class="text-3xl font-bold ">Consumer Paribahan</h1>
-                    <p class="py-6 font-medium">Yes, you can run unit tests and view the results directly within the app. The integrated <br>
+                    <p class="py-6 font-medium">Well known transport system, you can view the results directly within the app. The integrated <br>
                         testing features allow for a streamlined .</p>
                 </div>
                 <div class="w-full">
